--- a/client/src/components/details/SongDetails.module.css
+++ b/client/src/components/details/SongDetails.module.css
@@ -96,3 +96,20 @@
     background-color: #ccc;
     color: #1e3a8a;
 }
+
+.commentsButton {
+    margin-left: 10px;
+    padding: 8px 12px;
+    background-color: #1DB954;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 14px;
+    transition: background-color 0.3s;
+}
+
+.commentsButton:hover {
+    background-color: #17a44c;
+}
